--- a/capa.html
+++ b/capa.html
@@ -12,6 +12,7 @@
     </header>
     <main>
         <img class="fcapa" src="imagem capa.jfif" width="50%" height="100%" alt="" srcset="">
+        <h1>guarda roupa</h1>
     </main>
     <footer></footer>
 </body>
