--- a/capa.html
+++ b/capa.html
@@ -3,17 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guarda Roupa Vitual</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Mate+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Mate+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Euphoria+Script&family=Mate+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Serif+Display:ital@0;1&family=Euphoria+Script&family=Mate+SC&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon (8).ico" type="image/x-icon">
     <link rel="stylesheet" href="capa.css">
 </head>
+
 <body>
     <header>
         <img class="logo" src="logo black.png" alt="" srcset="">
     </header>
     <main>
         <img class="fcapa" src="imagem capa.jfif" width="50%" height="100%" alt="" srcset="">
-        <h1>guarda roupa</h1>
+        <h1 class="titulo cormorant-infant-bold-italic" >Guarda Roupa <br> Virtual</h1>
+        <h2 class="mate-sc-regular">agora você pode comprar suas roupas online sem medo.</h2>
+        <div class="container">
+            <button class="button"><a href="escolher.html">Entrar</a></button>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <img class="git" src="git.png" alt="" srcset="">
+        <p id="ana">@accostantin</p>
+        <img class="gitM" src="git.png" alt="" srcset="">
+        <p id="madu">@mariasschenkel</p>
+        <img class="gitB" src="git.png" alt="" srcset="">
+        <p id="bella">@bellaslzr</p>
+    </footer>
 </body>
 </html>
