--- a/experimenteM.html
+++ b/experimenteM.html
@@ -21,12 +21,10 @@
             <video id="vid"></video>
         </div>
         <br />
-        <button id="but" autoplay>
-            Abrir câmera
-        </button>
 
         <div class="form">
-            <input class="input" name="medida" id="medida" placeholder="Digite a sua medida" required="" type="text"> <input type="button"  value="Calcula" id="calcula">
+            <input class="input" name="medida" id="medida" placeholder="Digite a sua medida" required="" type="text"> 
+            <input class="entrar" type="button"  value="Entrar" id="calcula">
             <span class="input-border"></span>
         </div>
 
@@ -35,6 +33,13 @@
     <p id="tamanhos"> Seu tamanho é </p>
 
     <h1>Precisa de ajuda?</h1>
+    <ol>
+        <li>Medir a circunferência da sua roupa ao redor do seu tórax.</li>
+        <li>Anexe sua medida.</li>
+        <li>Clique em entrar.</li>
+        <li>Se posicione na frente da câmera, havendo um espaço entre ambos.</li>
+        <li>Após isso, a roupa será projetada em você, lhe mostrando o seu tamanho ideal.</li>
+    </ol>
 
     <img id="manequim" class="manequimM" src="mascP.png" alt="" srcset="">
 
