--- a/feminino.html
+++ b/feminino.html
@@ -16,19 +16,54 @@
         <div class="slider">
             <div class="slides">
                 <div id="slide-1">
-                <img src="roupaf1.png" alt="" srcset="">
+                    <a href="experimenteF.html">
+                        <img src="roupaf1.png" alt="" srcset="">
+                    </a>
                 </div>
                 <div id="slide-2">
-                <img src="roupaf2.png" alt="" srcset="">
+                    <a href="experimenteF.html">
+                        <img src="roupaf2.png" alt="" srcset="">
+                    </a>
                 </div>
                 <div id="slide-3">
-                <img src="roupaf3.png" alt="" srcset="">
+                    <a href="experimenteF.html">
+                        <img src="roupaf3.png" alt="" srcset="">
+                    </a>
                 </div>
                 <div id="slide-4">
-                <img src="roupaf4.png" alt="" srcset="">
+                    <a href="experimenteF.html">
+                        <img src="roupaf4.png" alt="" srcset="">
+                    </a>
                 </div>
                 <div id="slide-5">
-                5
+                    <a href="experimenteF.html">
+                        <img src="roupaf5.png" alt="" srcset="">
+                    </a>
+                </div>
+                <div id="slide-6">
+                    <a href="experimenteF.html">
+                        <img src="roupaf6.png" alt="" srcset="">
+                    </a>
+                </div>
+                <div id="slide-7">
+                    <a href="experimenteF.html">
+                        <img src="roupaf7.png" alt="" srcset="">
+                    </a>
+                </div>
+                <div id="slide-8">
+                    <a href="experimenteF.html">
+                        <img src="roupaf8.png" alt="" srcset="">
+                    </a>
+                </div>
+                <div id="slide-9">
+                    <a href="experimenteF.html">
+                        <img src="roupaf9.png" alt="" srcset="">
+                    </a>
+                </div>
+                <div id="slide-10">
+                    <a href="experimenteF.html">
+                        <img src="roupaf10.png" alt="" srcset="">
+                    </a>
                 </div>
             </div>
         </div>
