--- a/experimenteF.html
+++ b/experimenteF.html
@@ -37,11 +37,11 @@
         <li>Após isso, a roupa será projetada em você, lhe mostrando o seu tamanho ideal.</li>
     </ol>
 
-    <img id="manequim" class="manequimM" src="mascP.png" alt="" srcset="">
+    <img id="manequim" class="manequimF" src="femP.png" alt="" srcset="">
 
     </main>
     <footer></footer>
     
-    <script src="experimenteM.js"></script>
+    <script src="experimenteF.js"></script>
 </body>
 </html>
