--- a/experimenteF.html
+++ b/experimenteF.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Experimente sua roupa</title>
+
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> 
 
     <link rel="stylesheet" href="experimenteF.css">
     <link rel="shortcut icon" href="favicon (8).ico" type="image/x-icon">
@@ -14,7 +17,22 @@
     </header>
     <main>
         <div>
-            <video id="vid"></video>
+            <video id="vid">
+                <a-scene vr-mode-ui="enabled: false;" embedded arjs="debugUIEnabled: false;">
+                    <a-assets>
+                <img id="foto" src="roupaf8.png">
+                </a-assets>
+                <a-marker present="hiro">
+                <a-image width="4.5"
+                height="4.5"
+                rotation="90 0 0"
+                position="0 0 0"
+                src="#foto"></a-image>
+                    </a-marker>
+                <a-entity camera></a-entity>
+                </a-scene>
+                
+            </video>
         </div>
         <br />
 
