--- a/feminino.html
+++ b/feminino.html
@@ -16,52 +16,52 @@
         <div class="slider">
             <div class="slides">
                 <div id="slide-1">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=1">
                         <img src="roupaf1.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-2">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=2">
                         <img src="roupaf2.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-3">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=3">
                         <img src="roupaf3.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-4">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=4">
                         <img src="roupaf4.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-5">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=5">
                         <img src="roupaf5.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-6">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=6">
                         <img src="roupaf6.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-7">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=7">
                         <img src="roupaf7.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-8">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=8">
                         <img src="roupaf8.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-9">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=9">
                         <img src="roupaf9.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-10">
-                    <a href="experimenteF.html">
+                    <a href="experimenteF.html?roupa=10">
                         <img src="roupaf10.png" alt="" srcset="">
                     </a>
                 </div>
