--- a/feminino.html
+++ b/feminino.html
@@ -22,22 +22,22 @@
                 </div>
                 <div id="slide-2">
                     <a href="experimenteF.html?roupa=2">
-                        <img src="roupaf2.png" alt="" srcset="">
+                        <img src="roupaFnova.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-3">
                     <a href="experimenteF.html?roupa=3">
-                        <img src="roupaf3.png" alt="" srcset="">
+                        <img src="roupaf3Nova.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-4">
                     <a href="experimenteF.html?roupa=4">
-                        <img src="roupaf4.png" alt="" srcset="">
+                        <img src="roupaf4Nova.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-5">
                     <a href="experimenteF.html?roupa=5">
-                        <img src="roupaf5.png" alt="" srcset="">
+                        <img src="roupaf5Nova.png" alt="" srcset="">
                     </a>
                 </div>
                 <div id="slide-6">
