--- a/masculino.html
+++ b/masculino.html
@@ -29,7 +29,7 @@
               </div>
               <div id="slide-3">
                 <a href="experimenteM.html?roupa=3">
-                <img src="roupam3.png" alt="" srcset="">
+                <img src="roupaMnova.png" alt="" srcset="">
                 </a>
                 
               </div>
