--- a/experimenteM.html
+++ b/experimenteM.html
@@ -23,9 +23,10 @@
             <img id="foto" src="roupaf8.png">
             </a-assets>
             <a-marker present="hiro">
-            <a-image width="4.5"
-            height="4.5"
-            rotation="90 0 0"
+            <a-image id="roupaSobre" 
+            width="5"
+            height="5"
+            rotation="90 180 0"
             position="0 0 0"
             src="#foto"></a-image>
                 </a-marker>
